<resources>
    <string name="app_name">Пособие курсанту</string>
    <string name="time">Время до отпуска</string>
    <string name="advice">Полезные советы</string>
    <string name="exit">Выход</string>
    <string name="qest">Задачи</string>
    <string name="horn">Здарова</string>
    <string name="Sovet_wash">Советы по уборке</string>
    <string name="Moral">Поддержание морального состояния</string>
    <string name="Sovet_work">Советы по службе</string>
    <string name="state_book">Какие статьи устава обязательно знать</string>
    <string name="wash_book_list">Пожалуй самая больная тема в армии эта уборка. Поддерживать порядок придется все время, иначе, будете убираться даже когда чисто.
Итак что убирать? Все). А если конкретнее следует обратить внимание на поверхности шкафов, тумб, батарей, подоконников, картин, описей,
табличек с номером помещения, дужек кроватей, плинтусов и дверей. Все пречисленные места часто покрываются пылью и грязью, следовательно очень любимы
различными проверяющими. Не стоит забывать и о чистоте полов, особенно под прикроватными думбами и под кроватями. Чем убираться?
Ну тут два врианта первый - тем что дадут, второй - тем что купили вы. Могу лишь дополнить, что из чистящих средств у вас будет лишь мыло и вода.
Так что лучше зразу купите санокс, доместос и пемолюкс. Обратите внимание на сломанные вещи, не хватающие болта, и трещены в стенах, ведь после
приема территории все это будет на вашей совести. Если же вам интересны советы по конкретному ремонту, например как заделать дырки в стенах
или как вывести плесень пишите об этом в отзывах и ждите обновления)</string>
    <string name="work_book_list">РАБОТА</string>
    <string name="state_book_list">УСТАВ</string>
    <string name="psyho_book_list">МОРАЛЬ</string>
    <string name="back">Назад</string>
    <string name="Chat">Чат</string>
    <string name="input">Input</string>
    <string name="todo">TODO</string>
</resources>